@@ -1993,7 +1993,7 @@ machine(
         type("sgi")
         subtype("o2")
 	use_x11(1)
-	memory(256)
+	memory(1024)
 
         load("bsd.rd.IP32")
         ! load("bsd.IP32")
