@@ -2,7 +2,7 @@
 #define	MACHINE_H
 
 /*
- *  Copyright (C) 2005-2018  Anders Gavare.  All rights reserved.
+ *  Copyright (C) 2005-2019  Anders Gavare.  All rights reserved.
  *
  *  Redistribution and use in source and binary forms, with or without
  *  modification, are permitted provided that the following conditions are met:
@@ -144,7 +144,7 @@ struct machine {
 	struct symbol_context symbol_context;
 
 	int	random_mem_contents;
-	int	physical_ram_in_mb;
+	uint32_t physical_ram_in_mb;
 	int	memory_offset_in_mb;
 	int	prom_emulation;
 	int	register_dump;
